@@ -3,6 +3,8 @@ Version: 2.0.2
 Date: ????
   Features:
     - Clicking a machine on the recipe screen will give you a blueprint of that machine with the recipe set
+  Bugfixes:
+    - Fixed that the session history would sometimes get a duplicated home entry, causing a crash when trying to format the back button
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2020-07-20
